--- a/js/DOM객체.html
+++ b/js/DOM객체.html
@@ -20,7 +20,7 @@
 <body>
 	<p id="firstP">안녕하세요</p>
 	<p id="secondP">안녕하세요</p>
-	
+	//스크립트 객체를 밑에다가 쓸거면 p태그 밑에 써야함. 스크립트는 파싱중 발견됐을 때 가장 먼저 파싱 하기 때문.
 
 </body>
 </html>
