--- a/js/예제8-2(p363)- 8-6(p370).html
+++ b/js/예제8-2(p363)- 8-6(p370).html
@@ -2,7 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8">
-		<title>예제8-2(p363)- 8-6(p370).html</title>
+		<title>예제8-2(p363)- 8-6(p370)</title>
 		<script type="text/javascript">
 			function callName(){
 				var mySpan = document.getElementById("mySpan");
