--- a/jquery/ajax.html
+++ b/jquery/ajax.html
@@ -18,10 +18,28 @@
 							let str = "이름은 "+name+" 나이는 "+age+" 직업은 "+job;
 							$("#sss").html(str);
 						},
-						error:function(request,status,error){	
-							alert("실패");
+						error:function(request,status,error){
+							alert("다시 시도하시기 바랍니다.");
+							alert("message:"+request.responseText);
 						}	
 					});	
+				});
+				$("#btn2").on("click",function(){
+					let memberId=$("#memberId").val();
+					$.ajax({
+						url:"json2.jsp",
+						method:"POST",
+						data:{"memberId": memberId},
+						dataType:"json",
+						success:function(data){
+							let memberId = data.memberId;
+							alert(memberId);
+						},
+						error:function(request,status,error){
+							alert("다시 시도하시기 바랍니다.");
+							alert("message:"+request.responseText);
+						}	
+					});
 				});
 			});
 		</script>
@@ -29,5 +47,8 @@
 	<body>
 		<div id="sss">버튼을 클릭하면 이곳에 데이터를 출력하세요</div>
 		<button id="btn1">데이터 가져와서 화면에 출력하기</button>
+		<input type="text" id="memberId">
+		<button id="btn2">아이디 넘기기</button>
+		
 	</body>
 </html>
